<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:weightSum="1"
   >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/guunuud"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.80"
        android:contentDescription="@string/morid2"
        android:src="@drawable/guu1"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_blue"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/guu_nemeh"
        android:textColor="@color/cardview_light_background"
        android:layout_below="@+id/imageView6"
        android:layout_alignStart="@+id/button12"
        android:layout_marginTop="41dp" />

    <Button
        android:id="@+id/button12"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_blue"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/гуу_харах"
        android:textColor="@color/cardview_light_background"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" />
    <android.support.design.widget.BottomNavigationView

        android:id="@+id/bottom_navigation_menu"


        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"


        android:visibility="visible"

        app:itemBackground="@color/colorPrimary"

        app:itemIconTint="@color/colorPrimaryDark"
        app:itemTextColor="@color/colorPrimaryDark"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>