<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="1"
    >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:fontFamily="sans"
        android:text="@string/unaganuud"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/morid2"
        android:src="@drawable/colt"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/buttonADdColt"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="42dp"
        android:background="@drawable/button_blue"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/unaga_nemeh"
        android:layout_below="@+id/imageView7"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonViewAllColt"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonADdColt"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/button_blue"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/buh_unaga_harah" />
    <android.support.design.widget.BottomNavigationView

        android:id="@+id/bottom_navigation_menu"


        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"

        android:visibility="visible"

        app:itemBackground="@color/colorPrimary"

        app:itemIconTint="@color/colorPrimaryDark"

        app:itemTextColor="@color/colorPrimaryDark"
        app:menu="@menu/bottom_navigation_menu" />


</RelativeLayout>