<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
  >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:fontFamily="sans"
        android:text="@string/morid_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="331dp"
        android:layout_height="217dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/morid2"
        android:src="@drawable/morid1"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

    <Button
        android:id="@+id/buttonAddMaleAct"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_blue"

        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/mori_nemeh"
        android:textColor="@color/cardview_light_background"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/imageView5"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonViewMale"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAddMaleAct"
        android:layout_centerHorizontal="true"

        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_blue"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/harah_morid"
        android:textColor="@color/cardview_light_background" />

    <android.support.design.widget.BottomNavigationView

        android:id="@+id/bottom_navigation_menu"


        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"

        android:layout_marginTop="10dp"

        android:visibility="visible"

        app:itemBackground="@color/colorPrimary"

        app:itemIconTint="@color/colorPrimaryDark"
        app:itemTextColor="@color/colorPrimaryDark"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>