<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="19dp"
        android:fontFamily="sans"
        android:text="@string/azarga_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/imageaa"
        android:src="@drawable/azarga1" />


    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button11"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignStart="@+id/button11"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_blue"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="Шинэ азарга"
        android:textColor="@color/cardview_light_background" />

    <Button
        android:id="@+id/button11"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="73dp"
        android:background="@drawable/button_blue"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/all_azarga_harah"
        android:textColor="@color/cardview_light_background"
        android:layout_above="@+id/bottom_navigation_menu"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <android.support.design.widget.BottomNavigationView

        android:id="@+id/bottom_navigation_menu"


        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_gravity="start"

        android:visibility="visible"

        app:itemBackground="@color/colorPrimary"

        app:itemIconTint="@color/colorPrimaryDark"

        app:itemTextColor="@color/colorPrimaryDark"
        app:menu="@menu/bottom_navigation_menu" />



</RelativeLayout>